--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
   margin-top: 5rem;
   padding: 1rem;
+
   background: linear-gradient(to right, #fc4a1a, #f7b733), #fc4a1a;
 
-  @include flex(flex-end, center);
+  @include flex;
   flex-direction: column;
 
   .copyright {
@@ -20,6 +21,8 @@
   > p {
     font-family: "Lato", sans-serif;
     color: rgba(0, 0, 0, 0.671);
+
+    margin-bottom: 0;
   }
 
   p > a {
@@ -45,6 +48,5 @@
       border-radius: 2px;
       background-color: #302001;
     }
-
   }
 }
