--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -5,7 +5,7 @@
   background-position: center;
 
   .wrapper {
-    max-width: 60%;
+    max-width: 80%;
     margin: 0rem auto;
     background-color: white;
   }
@@ -167,7 +167,7 @@
     }
 
     .wrapper {
-      max-width: 80%;
+      max-width: 93%;
     }
 
     .title-h2 {
@@ -183,13 +183,15 @@
       height: 75rem;
 
       .infor-items {
-        @include flex(start, space-evenly);
+        @include flex(center, space-evenly);
         flex-direction: column;
         gap: 2rem;
       }
 
       .description {
         width: 20rem;
+
+        text-align: center;
       }
     }
 
